[workspace]
members = [
    "programs/arena-lock-v2",
]
resolver = "2"

[workspace.dependencies]
borsh = { version = "1.5.7", features = ["derive"] }
solana-program = "2.2.3"
solana-program-test = "2.2.3"
solana-sdk = "2.2.3"
spl-token = { version = "8.0.0", features = ["no-entrypoint"] }
spl-token-2022 = { version = "8.0.1", features = ["no-entrypoint"] }
thiserror = "2.0.17"
tokio = { version = "1.48.0", features = ["macros", "rt-multi-thread"] }
